# gunc

./: .coveragerc  .flake8  .gitattributes  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
docs/source/: citations.rst  conf.py  datasets.rst  functions.rst  index.rst  installation.rst  output.rst  release-history.rst  usage.rst
gunc/: __init__.py  _version.py  checkm_merge.py  decontaminate.py  external_tools.py  get_scores.py  gunc.py  gunc_database.py  visualisation.py
gunc/data/: genome2taxonomy_pg2.1ref.tsv  genome2taxonomy_ref.tsv  template.html
gunc/tests/: conftest.py  test_external_tools.py  test_get_scores.py  test_gunc.py  test_gunc_database.py  test_visualisation.py
gunc/tests/ci_test_data/: chimeric.faa  ci_test.dmnd  clean.faa  genome2taxonomy.tsv  reference_proteins.faa
gunc/tests/test_data/: test_genome.fa.diamond.out  test_genome.fa.diamond.out.chimerism_scores  test_genome.fa.genecalls.faa  tiny_test.base_data  tiny_test.chimerism_scores  tiny_test.diamond.out  tiny_test.gene_counts.json
recipes/: meta.yaml
